# lurk-hs

./: .ghci  .gitignore  .gitmodules  Cargo.toml  Main.hs  Makefile  README.md  Setup.hs  Setup.lhs  cabal.project  flake.nix  hsbindgen.toml  plonk-verify.cabal  rust-toolchain.toml
.github/workflows/: ci.yml
assets/: epoch_change.json  fibonacci_fixture.json  inclusion_fixture.json
babybear/: Cargo.toml
babybear/src/: lib.rs
src/: EmbedVKeys.hs  PlonkVerify.hs  lib.rs
src/PlonkBn254/: Verify.hs
src/PlonkBn254/Utils/: EmbedVMKeys.hs
test/: Main.hs  test.cabal
test/app/: Main.hs
tests/: Main.hs
