cabal-version: 3.0
name: plonk-verify
version: 0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license: MIT

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and
-- patches.
-- maintainer:

copyright: Copyright (c) 2024 Argument Computer Corporation

extra-doc-files:
    README.md

extra-source-files:
    Cargo.toml
    Cargo.lock
    src/lib.rs

data-files:
    verifier-assets/v1.0.8-testnet/vk.bin

build-type: Custom
custom-setup
    setup-depends:
        , Cabal
        , base
        , directory
        , process

common warnings
    ghc-options: -Wall

library
    import: warnings
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:
        PlonkVerify
        EmbedVKeys
    build-depends:
        , base
        , base16-bytestring >=0.1.1.7
        , bytestring >=0.11.2
        , directory >=1.3
        , filepath >=1.4
        , template-haskell >=2.16
        , temporary >=1.3
        , vector >=0.12
    frameworks:
        CoreFoundation
        Security
    extra-bundled-libraries:
        Cplonk_verify

test-suite tests
    import: warnings
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: Main.hs
    hs-source-dirs: tests
    build-depends:
        , aeson >=2.2
        , base
        , base16-bytestring >=0.1.1.7
        , bytestring >=0.11.2
        , hspec >=2.11
        , plonk-verify
        , text >=2.1
